@@ -1,3 +1,4 @@
+* Remove window_name on Action Window
 * Return the calling keyword in ActionKeyword.get_keywords
 * Add customizable login process
 * Allow to customize the substitutions used on sequence
